--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bom, bom, bom, booooooom!</title>
+  <title>Hiya Folks!!</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -15,7 +15,13 @@
     </ul>
   </nav>
 
-  <h1>Disney World</h1>
+  <h1>Please select a park:</h1>
+  <h2>
+  <a href="./mk.html"><img src="./MKwpBanner.jpg"/></a>
+  <a href="./hs.html"><img src="./Disney's-Hollywood-Stuios_WV_banner.jpg"/></a>
+  <a href="./epcot.html"><img src="./banner-home-epcot.jpg"/></a>
+  <a href="./ak.html"><img src="./animal kingdom banner.jpg"/></a>
+  </h2>
 
   <footer>
     <p>Presented by Lindsey Woolf and Nicole Theurer</p>
