--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <h1>Please select a park:</h1>
   <h2>
   <a href="./mk.html"><img src="./MKwpBanner.jpg"/></a>
-  <a href="./hs.html"><img src="./Disney's-Hollywood-Stuios_WV_banner.jpg"/></a>
+  <a href="./hs.html"><img src="./hs.jpg"/></a>
   <a href="./epcot.html"><img src="./banner-home-epcot.jpg"/></a>
   <a href="./ak.html"><img src="./animal kingdom banner.jpg"/></a>
   </h2>
