--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   </nav>
 
   <h1>Please select a park:</h1>
-  <h2>
+  <li class="crop">
   <a href="./mk.html"><img src="./MKwpBanner.jpg"/></a>
   <a href="./hs.html"><img src="./hs.jpg"/></a>
   <a href="./epcot.html"><img src="./banner-home-epcot.jpg"/></a>
   <a href="./ak.html"><img src="./animal kingdom banner.jpg"/></a>
-  </h2>
+  </li>
 
   <footer>
     <p>Presented by Lindsey Woolf and Nicole Theurer</p>
