wrote script for magic kingdom

--- a/mk.html
+++ b/mk.html
@@ -17,6 +17,22 @@
 
   <h1>Disney World: Magic Kingdom</h1>
 
+  <form>
+      <label>Enter a ride to get info about</label>
+      <input id="mkInput" type="text"></input>
+      <br />
+      <input id="mkSubmit" type="submit" value="Submit"></input>
+    </form>
+
+    <br />
+
+    <div class="mkResults" id="mkResults">
+    </div>
+
+    <script src="http://touringplans.com/magic-kingdom/attractions.json"></script>
+    <script text="type/javascript" src="./script.js">
+    </script>
+
   <footer>
     <p>Presented by Lindsey Woolf and Nicole Theurer</p>
     <p><a href="https://github.com/TeamLicole/DisneyCP2">GitHub Rep</a></p>
