--- a/epcot.html
+++ b/epcot.html
@@ -4,7 +4,7 @@
   <title>Epcot</title>
   <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body background="cp_back.jpg">
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
