--- a/hs.html
+++ b/hs.html
@@ -4,7 +4,7 @@
   <title>Hollywood Studios</title>
   <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body background="hs_back.jpg">
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
