--- a/mk.html
+++ b/mk.html
@@ -4,7 +4,7 @@
   <title>Magic Kingdom</title>
   <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body background ="mk_back.jpg">
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
