--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Hiya Folks!!</title>
   <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body background="Dumbo.jpg">
   <nav>
     <ul>
       <li><a class="active" href="index.html">Home</a></li>
