--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     </ul>
   </nav>
 
+<div id="page-wrap">
+
   <h1>Please select a park:</h1>
   <li class="crop">
   <a href="./mk.html"><img src="./MKwpBanner.jpg"/></a>
@@ -23,6 +25,7 @@
   <a href="./ak.html"><img src="./animal kingdom banner.jpg"/></a>
   </li>
 
+</div>
   <footer>
     <p>Presented by Lindsey Woolf and Nicole Theurer</p>
     <p><a href="https://github.com/TeamLicole/DisneyCP2">GitHub Rep</a></p>
