--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   </br></br>
   <h1>Please select a park:</h1>
   <li class="crop">
-  <a href="./mk.html"><img src="./MKwpBanner.jpg"/></a>
-  <a href="./hs.html"><img src="./hs.jpg"/></a>
-  <a href="./epcot.html"><img src="./banner-home-epcot.jpg"/></a>
-  <a href="./ak.html"><img src="./animal kingdom banner.jpg"/></a>
+  <a href="./mk.html"><img src="./MKwpBanner.jpg"/></a></br>
+  <a href="./hs.html"><img src="./hs.jpg"/></a></br>
+  <a href="./epcot.html"><img src="./banner-home-epcot.jpg"/></a></br>
+  <a href="./ak.html"><img src="./animal kingdom banner.jpg"/></a></br>
   </li>
 
 </div>
