fixed script string bug and updated mk.html

--- a/mk.html
+++ b/mk.html
@@ -18,20 +18,20 @@
   <h1>Disney World: Magic Kingdom</h1>
 
   <form>
-      <label>Enter a ride to get info about</label>
-      <input id="mkInput" type="text"></input>
-      <br />
-      <input id="mkSubmit" type="submit" value="Submit"></input>
-    </form>
-
+    <label>Enter a ride to get info about</label>
+    <input id="mkInput" type="text"></input>
     <br />
+    <input id="mkSubmit" type="submit" value="Submit"></input>
+  </form>
 
-    <div class="mkResults" id="mkResults">
-    </div>
+  <br />
 
-    <script src="http://touringplans.com/magic-kingdom/attractions.json"></script>
-    <script text="type/javascript" src="./script.js">
-    </script>
+  <div class="mkResults" id="mkResults">
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script text="type/javascript" src="./script.js">
+  </script>
 
   <footer>
     <p>Presented by Lindsey Woolf and Nicole Theurer</p>
